# EduConnect

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
database/migrations/: 001_initial_schema.sql  002_permissions.sql  003_triggers.sql  004_functions.sql  005_procedures.sql
database/seeds/: 001_seed_data.sql
frontend/: Dockerfile  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/providers/: ToastProvider.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  HTMLEditor.tsx
frontend/src/lib/: api.ts  auth.ts
rabbitmq/: definitions.json  rabbitmq.conf
services/ai-service/: Dockerfile  requirements.txt
services/ai-service/app/: main.py
services/ai-service/app/analyzers/: txt_analyzer.py  word_to_html.py
services/ai-service/app/rag/: rag_service.py
services/auth-service/: Dockerfile  requirements.txt
services/auth-service/app/: config.py  database.py  main.py
services/file-service/: Dockerfile  requirements.txt
services/file-service/app/: config.py  main.py
services/health-service/: Cargo.toml  Dockerfile
services/health-service/src/: main.rs
services/log-service/: Dockerfile  package.json
services/log-service/src/: index.js  logger.js
services/notification-service/: Dockerfile  go.mod
services/notification-service/cmd/: main.go
services/user-service/: Dockerfile  requirements.txt
services/user-service/app/: config.py  main.py
(+28 files in other folders)
